distribution/knative/removals/remove-knative-ingress-gateway.yaml
$patch: delete
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: knative-ingress-gateway
  namespace: knative-serving
